--- a/2048/css/style.css
+++ b/2048/css/style.css
@@ -1,18 +1,18 @@
-.game-container {
+#game-container {
   margin-top: 40px;
   position: relative;
   padding: 15px;
   cursor: default;
   background: #bbada0;
   border-radius: 6px;
-  width: 500px;
-  height: 500px;
+  width: 430px;
+  height: 430px;
   box-sizing: border-box;
 }
 
 .block {
-	width: 50px;
-	height: 50px;
+	width: 100px;
+	height: 100px;
 	float: left;
 	border: 1px solid white;
 	box-sizing: border-box;
@@ -20,4 +20,19 @@
 	text-align: center;
 	font-size: 40px;
 	text-transform: uppercase;
+    padding: 25px;
+
+}
+
+#btn-restart{
+    width: 60px;
+    height: 30px;
+    background: darkseagreen;
+}
+
+#controls-btn{
+    display: block;
+    position: relative;
+    float: right;
+    margin: -200px 50px auto;
 }
