2048 small update. to get NOTHING!!!

--- a/2048/css/style.css
+++ b/2048/css/style.css
@@ -33,6 +33,5 @@
 #controls-btn{
     display: block;
     position: relative;
-    float: right;
-    margin: -200px 50px auto;
+    margin: 20px auto;
 }
